samples/_failures_safe/1761195961_3bdb9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_528111c0.c: In function ‘main’:
./samples/SAFE/__tmp_528111c0.c:156:11: error: expected ‘;’ at end of input
  156 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_528111c0.c:156:5: error: expected declaration or statement at end of input
  156 |     printf
      |     ^~~~~~
